--- a/style.css
+++ b/style.css
@@ -27,10 +27,26 @@ body, html {
     background: #61497B; 
 }
 
+#companySign {
+    color: #ffffff;
+    font-family: Calibri;
+    transform: translate(100%);
+}
+
+#navbarLinks {
+    transform: translate(-60%);
+}
+
+#navbarLinks > a {
+    font-weight: bold;
+    color: #ffffff;
+}
+
 #home {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('images/background_2.jpg');
     color: hsl(0, 0%, 100%);
     height: 100%;
+    width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;   
